--- a/docker/native-image/dockerfile
+++ b/docker/native-image/dockerfile
@@ -1,3 +1,5 @@
+# Use an old version of Ubuntu to build the test server to maintain compatibility with 
+# older versions of glibc, specifically glib 2.17.
 FROM ubuntu:18.04
 ENV JAVA_HOME=/opt/java/openjdk
 COPY --from=eclipse-temurin:21 $JAVA_HOME $JAVA_HOME
