--- a/temporal-test-server/build.gradle
+++ b/temporal-test-server/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
     ext {
         // 0.11.0 and later are build on JDK 11 bytecode version
-        graalVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.12.0' : '0.10.0'}"
+        graalPluginVersion = "${JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11) ? '0.12.0' : '0.10.0'}"
     }
 }
 
 plugins {
     id 'application'
-    id 'com.palantir.graal' version "${graalVersion}"
+    // TODO: This project is not used internally at palantir and is no longer maintained.
+    id 'com.palantir.graal' version "${graalPluginVersion}"
     id 'com.google.protobuf' version '0.9.2'
 }
 
