workflowcheck - initial support for Java static analyzer

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'temporal-spring-boot-autoconfigure'
 include 'temporal-spring-boot-starter'
 include 'temporal-remote-data-encoder'
 include 'temporal-shaded'
+include 'temporal-workflowcheck'
