--- a/docker/github/dynamicconfig/development.yaml
+++ b/docker/github/dynamicconfig/development.yaml
@@ -28,3 +28,5 @@ component.callbacks.allowedAddresses:
   - value:
       - Pattern: "localhost:7243"
         AllowInsecure: true
+system.refreshNexusEndpointsMinWait:
+  - value: 1ms
